--- a/DataSummary.rnw
+++ b/DataSummary.rnw
@@ -41,7 +41,7 @@
 require( knitr, quietly=TRUE )  # Dynamic documents
 # Select region(s)/folder(s): major (HG, PRD, CC, SoG, WCVI); minor (A27, A2W);
 # special (A10, JS); or all (All)
-if( !exists('regName') )  regName <- "SoG"
+if( !exists('regName') )  regName <- "CC"
 # Set the path to the R output, including a trailing separator
 rPath <- file.path( "..", "DataSummaries", regName, .Platform$file.sep )
 # Load the R image
@@ -239,7 +239,7 @@ In some cases we make minor edits for clarity and brevity,
 but we do not change the intent or substance of responses.
 
 % Bring in custom text
-% \inputsp{\Sexpr{noquote(docPath)}FirstNationsObservations.tex}
+\inputsp{\Sexpr{noquote(docPath)}FirstNationsObservations.tex}
 
 % General observations section
 \section{General observations}
